# actix-elm

./: .gitignore  Cargo.toml  Dockerfile  build.rs  elm.json  package.json  purgecss.config.js  tailwind.config.js
.github/workflows/: dockerimage.yml
frontend/: Api.elm  Article.elm  Localization.elm  Main.elm  Navbar.elm  Page.elm  Route.elm  Session.elm  Style.elm  style.css
frontend/Page/: Article.elm  Blank.elm  Home.elm  Login.elm  Logout.elm  NotFound.elm  Register.elm  WriteArticle.elm
migrations/: 000.init.sql
migrations/001.tables/: 002.invitations.sql  003.articles.sql  004.roles.sql  005.user-roles.sql  006.temp-articles.sql  007.logs.sql  100.users-admin.sql  100.users-display-name.sql  101.users-drop-admin.sql
migrations/002.functions/: 001.register.sql  002.confirm.sql  003.authenticate.sql  004.check_admin.sql  005.create_article.sql  006.check-roles.sql  007.create_temp_article.sql  008.authorize.sql  009.get_temp_articles.sql
migrations/1.tables/: 1.users.sql
migrations/2.functions/: 2.confirm.sql  3.authenticate.sql
migrations/999.scripts/: 001.user_roles.sql
server/: database.rs  email.rs  html.rs  identity.rs  main.rs
src/: main.rs
static/: elm.js  index.html
