[package]
name = "dokku-test"
version = "0.1.0"
authors = ["alex"]
edition = "2018"
autobins = false
build = "build.rs"

[[bin]]
name = "dokku-test"
path = "server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features=["rustls"] }
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-identity = "0.2.1"
serde = "1.0.104"
serde_json = "1.0.45"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
postgres = "0.17.0"
tokio-postgres = "0.5.1"
lazy_static = "1.4.0"
glob = "0.3.0"
